k8s/events-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-app
  labels:
    app: events-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-app
  template:
    metadata:
      labels:
        app: events-app
    spec:
      containers:
        - name: events-app
          image: anikolovska/events-app:latest
          ports:
            - containerPort: 9091
