k8s/events-app-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-app-service
spec:
  selector:
    app: events-app
  ports:
    - protocol: TCP
      port: 8080        
      targetPort: 9091  
      nodePort: 30080   
  type: NodePort
