k8s/events-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-app-service
  namespace: events-namespace   
spec:
  selector:
    app: events-app            
  ports:
    - protocol: TCP
      port: 80                 
      targetPort: 9091         
  type: ClusterIP
