k8s/events-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-db
spec:
  selector:
    app: events-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
