k8s/events-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-db
  namespace: events-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-db
  template:
    metadata:
      labels:
        app: events-db
    spec:
      containers:
      - name: postgres
        image: postgres:17
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-data-events-db-0
---
apiVersion: v1
kind: Service
metadata:
  name: events-db
  namespace: events-namespace
spec:
  ports:
  - port: 5432
  selector:
    app: events-db
