k8s/events-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: events-app-ingress
  namespace: events-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: events.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: events-app-service
                port:
                  number: 80
